--- a/5/faq.html
+++ b/5/faq.html
@@ -3,4 +3,236 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Häufig gestellte Fragen - Lumina
+    <title>Häufig gestellte Fragen - Professioneller Zeuge</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+    <div class="animated-background">
+        <div class="sphere sphere-1"></div>
+        <div class="sphere sphere-2"></div>
+        <div class="sphere sphere-3"></div>
+        <div class="glass-overlay"></div>
+    </div>
+
+    <header class="glass-effect">
+        <nav>
+            <div class="logo">
+                <a href="index.html">Professioneller Zeuge</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Startseite</a></li>
+                <li><a href="services.html">Dienstleistungen</a></li>
+                <li><a href="about.html">Über uns</a></li>
+                <li><a href="faq.html" class="active">FAQ</a></li>
+                <li><a href="contact.html" class="cta-button">Kontakt</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="page-header">
+            <div class="header-content glass-card">
+                <h1>Häufig gestellte Fragen</h1>
+                <p>Hier finden Sie Antworten auf die häufigsten Fragen zu unseren Dienstleistungen.</p>
+            </div>
+        </div>
+
+        <section>
+            <div class="search-bar glass-card">
+                <input type="text" placeholder="Suchen Sie nach Antworten...">
+                <button><i class="fas fa-search"></i></button>
+            </div>
+
+            <div class="faq-categories">
+                <button class="category-btn active">Alle</button>
+                <button class="category-btn">Allgemein</button>
+                <button class="category-btn">Dienstleistungen</button>
+                <button class="category-btn">Prozess</button>
+                <button class="category-btn">Kosten</button>
+                <button class="category-btn">Rechtliches</button>
+            </div>
+
+            <div class="faq-container">
+                <!-- Vollständiger Text in FAQ-Antworten -->
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>Was genau macht ein professioneller Zeuge?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Ein professioneller Zeuge ist eine neutrale, unparteiische Person, die bei verschiedenen Situationen anwesend ist, um das Geschehen objektiv zu beobachten, zu dokumentieren und bei Bedarf später darüber Auskunft zu geben. Als professionelle Zeugen bieten wir folgende Leistungen an:</p>
+                        <ul>
+                            <li>Begleitung bei persönlichen, familiären oder geschäftlichen Treffen</li>
+                            <li>Objektive Beobachtung und detaillierte Dokumentation des Geschehens</li>
+                            <li>Erstellung von Gedächtnisprotokollen oder formellen Berichten</li>
+                            <li>Bei Bedarf beglaubigte Dokumentation als Beweismittel</li>
+                            <li>Deeskalation in potenziell konfliktträchtigen Situationen durch neutrale Präsenz</li>
+                        </ul>
+                        <p>Unsere Zeugen sind speziell geschult, diskret, aufmerksam und professionell zu agieren. Sie greifen nicht aktiv in Gespräche ein, es sei denn, dies wurde vorab vereinbart oder es ist zur Deeskalation notwendig.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>In welchen Situationen ist ein professioneller Zeuge sinnvoll?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Ein professioneller Zeuge kann in zahlreichen Situationen wertvoll sein, in denen eine unparteiische Beobachtung und Dokumentation wichtig ist:</p>
+                        <ul>
+                            <li><strong>Persönliche Angelegenheiten:</strong> Treffen mit Ex-Partnern, Übergabe persönlicher Gegenstände, schwierige Gespräche mit Angehörigen oder Bekannten</li>
+                            <li><strong>Familienrechtliche Situationen:</strong> Kindesübergaben bei getrennt lebenden Eltern, Familiengespräche zu Sorgerecht und Umgang, Nachlassregelungen</li>
+                            <li><strong>Geschäftliche Kontexte:</strong> Wichtige Verhandlungen ohne formellen Vertrag, Übergabe von Firmenvermögen, Auflösung von Geschäftspartnerschaften</li>
+                            <li><strong>Wohnungs- und Immobilienangelegenheiten:</strong> Wohnungsübergaben, Bestandsaufnahmen, Begutachtungen von Schäden</li>
+                            <li><strong>Konfliktträchtige Situationen:</strong> Gespräche zur Klärung von Missverständnissen oder Streitigkeiten, bei denen eine neutrale Person zur Deeskalation beitragen kann</li>
+                        </ul>
+                        <p>Besonders wertvoll ist ein professioneller Zeuge, wenn Sie befürchten, dass es später zu unterschiedlichen Darstellungen des Geschehenen kommen könnte, oder wenn Sie sich in der Situation mehr Sicherheit wünschen.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>Wie läuft ein typischer Einsatz ab?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Ein typischer Einsatz eines professionellen Zeugen umfasst folgende Schritte:</p>
+                        <ol>
+                            <li><strong>Vorgespräch und Planung:</strong> Wir besprechen Ihre spezifische Situation, Ihre Erwartungen und den genauen Ablauf. Dabei klären wir Details wie Ort, Zeit, Dauer und besondere Anforderungen.</li>
+                            <li><strong>Vorbereitung:</strong> Unser Zeuge bereitet sich auf Ihren speziellen Fall vor und macht sich mit allen relevanten Hintergrundinformationen vertraut.</li>
+                            <li><strong>Ankommen am Einsatzort:</strong> Der Zeuge trifft pünktlich ein, stellt sich vor und erklärt kurz seine Rolle (sofern gewünscht).</li>
+                            <li><strong>Während des Einsatzes:</strong> Der Zeuge bleibt im Hintergrund, beobachtet aufmerksam das Geschehen und macht sich bei Bedarf Notizen. Er greift nicht aktiv ein, es sei denn, dies wurde vorab vereinbart oder ist zur Deeskalation notwendig.</li>
+                            <li><strong>Dokumentation:</strong> Nach dem Einsatz erstellt der Zeuge ein detailliertes Protokoll oder einen formellen Bericht, je nach Vereinbarung.</li>
+                            <li><strong>Nachbesprechung:</strong> Bei Bedarf bieten wir ein Gespräch an, um den Einsatz zu reflektieren und weitere Schritte zu besprechen.</li>
+                        </ol>
+                        <p>Die genaue Ausgestaltung des Einsatzes wird individuell an Ihre Bedürfnisse angepasst. Wir legen größten Wert auf Diskretion, Professionalität und einen respektvollen Umgang mit allen Beteiligten.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>Sind die Berichte eines professionellen Zeugen rechtlich verwertbar?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Die Berichte und Dokumentationen unserer professionellen Zeugen können in rechtlichen Verfahren als Beweismittel eingebracht werden. Es gibt jedoch einige wichtige Punkte zu beachten:</p>
+                        <ul>
+                            <li>Die Berichte eines professionellen Zeugen stellen ein Beweismittel dar, dessen Gewichtung im Einzelfall vom Gericht bestimmt wird.</li>
+                            <li>Unsere Zeugen dokumentieren objektiv und faktentreu, was sie beobachtet haben, ohne Wertungen oder Interpretationen.</li>
+                            <li>Für eine optimale rechtliche Verwertbarkeit erstellen wir auf Wunsch beglaubigte Dokumente oder eidesstattliche Versicherungen.</li>
+                            <li>Bei Bedarf können unsere Zeugen auch in einem Gerichtsverfahren als Zeugen aussagen.</li>
+                            <li>Wir empfehlen, bereits vor dem Einsatz mit einem Rechtsanwalt zu besprechen, wie die Dokumentation optimal gestaltet werden sollte, wenn eine rechtliche Verwertung geplant ist.</li>
+                        </ul>
+                        <p>Bitte beachten Sie, dass ein professioneller Zeuge kein Ersatz für einen Notar ist, wenn es um die rechtliche Beglaubigung von Urkunden oder Verträgen geht. In solchen Fällen empfehlen wir die Hinzuziehung eines Notars.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>Was kostet ein professioneller Zeuge?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Die Kosten für einen professionellen Zeugen variieren je nach Art, Umfang und Dauer des Einsatzes. Wir bieten transparente Preismodelle, die sich wie folgt gestalten:</p>
+                        <ul>
+                            <li><strong>Stundensätze:</strong> Ab 75€ pro Stunde für einfache Begleitungen. Die Mindestbuchungszeit beträgt in der Regel 2 Stunden.</li>
+                            <li><strong>Pauschalpakete:</strong> Für häufig nachgefragte Standardsituationen bieten wir Pauschalpakete an, z.B. für Kindesübergaben oder kurze Geschäftstreffen.</li>
+                            <li><strong>Individuelle Angebote:</strong> Für komplexere oder längerfristige Einsätze erstellen wir gerne ein auf Ihre Situation zugeschnittenes Angebot.</li>
+                        </ul>
+                        <p>Zusätzliche Kosten können entstehen für:</p>
+                        <ul>
+                            <li>Fahrtkosten bei Einsätzen außerhalb unseres Kerngebiets</li>
+                            <li>Besonders umfangreiche Dokumentationen oder Berichte</li>
+                            <li>Erstellung von beglaubigten Dokumenten oder eidesstattlichen Versicherungen</li>
+                            <li>Einsätze an Wochenenden, Feiertagen oder zu ungewöhnlichen Zeiten</li>
+                        </ul>
+                        <p>Wir besprechen alle Kosten transparent im Vorfeld und erstellen Ihnen ein verbindliches Angebot. Bei regelmäßig wiederkehrenden Einsätzen bieten wir auch vergünstigte Konditionen an.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item">
+                    <div class="faq-question glass-card">
+                        <h3>Muss ich die andere Partei über den Zeugen informieren?</h3>
+                        <span class="toggle-icon">+</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Grundsätzlich empfehlen wir aus ethischen und praktischen Gründen, alle Beteiligten über die Anwesenheit eines professionellen Zeugen zu informieren. Dies schafft Transparenz und verhindert, dass sich andere Beteiligte überrumpelt oder getäuscht fühlen.</p>
+                        <p>In den meisten Situationen gilt:</p>
+                        <ul>
+                            <li>In privaten Räumen ist die Zustimmung aller Anwesenden zur Teilnahme eines Zeugen rechtlich erforderlich.</li>
+                            <li>In öffentlichen Räumen ist die Begleitung durch eine weitere Person grundsätzlich ohne Zustimmung möglich, jedoch ist aus ethischen Gründen eine Information zu empfehlen.</li>
+                            <li>Bei telefonischen Gesprächen sollte die andere Partei über den Mithörenden informiert werden.</li>
+                            <li>Für die Erstellung von Audio- oder Videoaufzeichnungen ist in jedem Fall die Zustimmung aller beteiligten Personen erforderlich.</li>
+                        </ul>
+                        <p>Wir beraten Sie gerne zu den spezifischen Anforderungen in Ihrer Situation und helfen Ihnen, einen angemessenen Weg zu finden, andere Beteiligte über die Anwesenheit des Zeugen zu informieren. Im Idealfall wird die Anwesenheit eines neutralen Zeugen von allen Beteiligten als vertrauensbildende Maßnahme begrüßt.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="additional-questions glass-card">
+            <h2>Haben Sie weitere Fragen?</h2>
+            <p>Sollte Ihre Frage hier nicht beantwortet sein, kontaktieren Sie uns gerne direkt. Wir stehen Ihnen für ein persönliches Gespräch zur Verfügung.</p>
+            <a href="contact.html" class="primary-button">Kontakt aufnehmen</a>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Professioneller Zeuge</h3>
+                <p>Wir bieten unparteiische Zeugenschaft und Dokumentation für private und rechtliche Angelegenheiten.</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>Kontakt</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Musterstraße 123, 10115 Berlin</p>
+                <p><i class="fas fa-phone"></i> +49 30 1234567</p>
+                <p><i class="fas fa-envelope"></i> info@professioneller-zeuge.de</p>
+            </div>
+            <div class="footer-section">
+                <h3>Schnelllinks</h3>
+                <ul>
+                    <li><a href="index.html">Startseite</a></li>
+                    <li><a href="services.html">Dienstleistungen</a></li>
+                    <li><a href="about.html">Über uns</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Kontakt</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Professioneller Zeuge. Alle Rechte vorbehalten.</p>
+            <div class="legal-links">
+                <a href="#">Impressum</a>
+                <a href="#">Datenschutz</a>
+                <a href="#">AGB</a>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+    // JavaScript für FAQ-Funktionalität
+    document.addEventListener('DOMContentLoaded', function() {
+        const faqQuestions = document.querySelectorAll('.faq-question');
+        
+        faqQuestions.forEach(question => {
+            question.addEventListener('click', () => {
+                const faqItem = question.parentElement;
+                faqItem.classList.toggle('active');
+            });
+        });
+    });
+    </script>
+</body>
+</html>
